*Empty MediaWiki Message*

--- a/Парцы_(Кадонь_буе).mw
+++ b/Парцы_(Кадонь_буе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Парца (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Парцы
@@ -70,7 +71,6 @@
 
 == Сёрм.: ==
 <references />
-
 
 [[Category:Мордовиянь велеть]]
 [[Category:Кадонь буень велеть]]
