*Empty MediaWiki Message*

--- a/Парьхця_(Пейкужо_буе).mw
+++ b/Парьхця_(Пейкужо_буе).mw
@@ -59,11 +59,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Парьхця'''  ({{Lang-ru|п. Парца}}) — [[мокшот|мокшонь]]<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/h_Parca.htm Многоликая Мордовия: Поселок Парца] {{Ref-ru}}</ref> посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со. Совавтови Явазонь ошонь посёлкас.
+'''Парьхця'''  ({{Lang-ru|п. Парца}}) — [[мокшот|мокшонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/610 Геопортал РГО: п. Парца] {{Ref-ru}}</ref> посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со. Совавтови Явазонь ошонь посёлкас.
 
 Ашти [[Парца лей]] лангсо. Ульнесь путозь-стявтозь  1922  иестэ [[Вадовскяй Селища (Пейкужо буе)|Вадовскяй Селища велестэ]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> сазь эрицятьнестэ.
+Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ([[1869 ие|1869]]) ''Парца – веле 36 кудот марто Вадово-Селищянь уездсэ''.}}
+{{oq|ru|В «СНП Средне-Волжского края» (1931) – Парца, поселок из 36 дворов  Вадово-Селищенского сельсовета.}}
+{{Цитатань пе}}
 
-
+Эрицятнеде: [[2002 ие]]стэ ульнесь 3127 лом., 2010 иень ловномасонть - 3017 ломанть.  
 == Веленть лемденть  ==
 Лемесь– гидроним<ref name="Память, запечатленная в слове"/>.
 
