*Empty MediaWiki Message*

--- a/Парьхця_(Пейкужо_буе).mw
+++ b/Парьхця_(Пейкужо_буе).mw
@@ -63,7 +63,7 @@
 
 Ашти [[Парца лей]] лангсо. Ульнесь путозь-стявтозь  1922  иестэ [[Вадовскяй Селища (Пейкужо буе)|Вадовскяй Селища велестэ]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> сазь эрицятьнестэ.
 Кода лецтяви<ref name="Память, запечатленная в слове"/>:
-{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ([[1869 ие|1869]]) ''Парца – веле 36 кудот марто Вадово-Селищянь уездсэ''.}}
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Парца – веле 36 кудот марто Вадово-Селищянь уездсэ''.}}
 {{oq|ru|В «СНП Средне-Волжского края» (1931) – Парца, поселок из 36 дворов  Вадово-Селищенского сельсовета.}}
 {{Цитатань пе}}
 
