*Empty MediaWiki Message*

--- a/Татарский_Лундан_(Пейкужо_буе).mw
+++ b/Татарский_Лундан_(Пейкужо_буе).mw
@@ -63,7 +63,7 @@
 
 
 Ашти [[Лундан лей|Лундан лееенть]] верьга чудемасонзо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
-{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ([[1869 ие|1869]]) ''Лундан – веле 138 кудот марто Керенэнь уездсэ''.}}
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие|1869]]) ''Лундан – веле 138 кудот марто Керенэнь уездсэ''.}}
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Лундан (Сергиевское) - село казенное (татарская часть) и владельческое (русская часть) из 138 дворов с церковью и мечетями Керенского уезда.}}
 {{Цитатань пе}}
 
