--- a/Йовлань_Оло.mw
+++ b/Йовлань_Оло.mw
@@ -31,6 +31,11 @@
 
 Чачсь Йовлань Оло [[1951]] [[таштамковонь 6 чи]]стэ  иестэ [[Ицял буе|Ицял буень]]  [[Ицяло(Ицял буень)|Ицяло]] эрзянь велесэ. 1975 иестэ прядызе пакшань седямо школанть [[Саран ош]]со, 1980 иестэ - Консерваториянть [[Казань ош|Казан ош]]со.
 
+РМ раськень политикань министрась Александр Лузгин лецти<ref name="ИМ">[http://izvmor.ru/article_13542.html ИМ // Памяти Владимира Ромашкина] {{Ref-ru}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|''Владимир Ромашкин – покш Инеломань...''.}}
+{{oq|ru|- Владимир Ромашкин – выдающаяся личность, он внес огромный вклад в развитие мордовской культуры. Его имя известно не только по всей России, но и за границей, в Финляндии, Норвегии и Швеции существуют его фан-клубы. Он сделал столько в деле сохранения культуры, что не под силу десятку людей. Отрадно, что дело Ромашкина продолжают его соратники,}}
+{{Цитатань пе}}
+
 == Йовлань Олонь лемсэ музей ==
 [[Image:Etno kudo.JPG|thumb|left|400px|Йовлань Олонь лемсэ «Этно-Кудо»]]
 [[2006]] иень[[Таштамковонь 6 чи]]стэ  Вирь Тавла велесэнть ульнезь панжозь [[Йовлань Олонь лемсэ «Этно-Кудо»]]<ref>Евдокимова Т. Его «Торама» звучит на весь мир. // Вперед. Атяшевского района. – 14 сентября. – С. 4. </ref>. Те кудось, конань сон рамизеть 1989 иестэ, ульнесь сонензэ оймень витнема таркакс - тезей сакшныль оймсеме стакачитнеде, саиль од вийть эсинзэ седямо-морамо тевтнене, арсиль кода седе пек сравтомонзо эрзя раськенть мазычинть.
