*Empty MediaWiki Message*

--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -24,7 +24,7 @@ EcRegNm=[[Уралонь экономикань буесь|Уралонь]]|
 CadNo=02, 102|
 OfLangs=[[Рузонь кель|рузонь]], [[Башкирэнь кель|башкирэнь]]|
 Прявтонть лем = Президент|
-HeadNm= Муртаза Рахимов|
+HeadNm= Рустэм Хамитов|
 MSKS=+2|
 }}
 [[Артовкс:Bashkir03.png|thumb|250px|right]]
