*Empty MediaWiki Message*

--- a/Русский_Лундан_(Пейкужо_буе).mw
+++ b/Русский_Лундан_(Пейкужо_буе).mw
@@ -49,11 +49,11 @@
  |часовой пояс            = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 431144
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {{ОКАТО|}}
+ |цифровой идентификатор  = {{ОКАТО|89221820005}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
