--- a/Русский_Лундан_(Пейкужо_буе).mw
+++ b/Русский_Лундан_(Пейкужо_буе).mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Рузонь Лундан
- |оригинальное название   = {{Lang-ru|д. Русский Лундан}}
+ |оригинальное название   = {{Lang-ru|с. Русский Лундан}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Лундан (смустьтне)}}
-'''Рузонь Лундан'''  ({{Lang-ru|д. Русский Лундан}}) — [[рузт|рузонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/568 Геопортал РГО: с. Русский Лундан] {{Ref-ru}}</ref> веле [[Пейкужо буе]]сэ, [[Мордовия]]со.
+'''Рузонь Лундан'''  ({{Lang-ru|с. Русский Лундан}}) — [[рузт|рузонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/568 Геопортал РГО: с. Русский Лундан] {{Ref-ru}}</ref> веле [[Пейкужо буе]]сэ, [[Мордовия]]со.
 
 
 Ашти [[Лундан лей|Лундан лееенть]] верьга чудемасонзо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
