*Empty MediaWiki Message*

--- a/Чуфаровка_(Пейкужо_буе).mw
+++ b/Чуфаровка_(Пейкужо_буе).mw
@@ -61,15 +61,20 @@
 }}
 '''Чуфаровка''' ({{Lang-ru|д. Чуфаровка}}) —  веле [[Мордовия Республикась|Мордовия Республикасонть]].
 Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
+Ашти [[Бель лей|Бель лееенть]] лангсо, кона [[Чюжь лей|Чюжь леенть]] сяглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие|1866]]) ''Чуфаровка – веле 6 кудот марто Спассонь уездсэ''.}}
+{{oq|ru|В «СНМ Тамбовской губернии» (1866) – Чуфаровка, деревня из 6 дворов  Спасского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 10 лом., 2010 иень ловномасонть - 4 ломанть.  
 
 == Веленть лемденть  ==
-
- 
+Лемесь–антропоним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>({{Lang-ru|Восходит к фамилии служилого человека на Керенской засечной черте  Клементия Чуфаровского, бывшего владельцем населенного пункта<ref name="ДМ">ДМ, 1959, т. 1, ч. 2,  с. 279{{ref-ru}}</ref>}}) .
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
-
 == Сёрм.: ==
 <references />
+
 
 
 [[Category:Мордовиянь велеть]]
