--- a/Чуфаровка_(Пейкужо_буе).mw
+++ b/Чуфаровка_(Пейкужо_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Чуфаровка''' ({{Lang-ru|д. Чуфаровка}}) —  веле [[Мордовия Республикась|Мордовия Республикасонть]].
+'''Чуфаровка''' ({{Lang-ru|д. Чуфаровка}}) — рузонь<ref name="Геопортал РГО">[http://geo13.ru/reestr/object/542 Геопортал РГО: д. Чуфаровка ]{{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия Республикасонть]].
 Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
 Ашти [[Бель лей|Бель лееенть]] лангсо, кона [[Чюжь лей|Чюжь леенть]] сяглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1866 ие|1866]]) ''Чуфаровка – веле 6 кудот марто Спассонь уездсэ''.}}
@@ -79,3 +79,4 @@
 
 [[Category:Мордовиянь велеть]]
 [[Category:Пейкужо буень велеть]]
+[[Category:Рузонь велеть]]
