*Empty MediaWiki Message*

--- a/Чуфаровка_(Пейкужо_буе).mw
+++ b/Чуфаровка_(Пейкужо_буе).mw
@@ -61,7 +61,7 @@
 }}
 '''Чуфаровка''' ({{Lang-ru|д. Чуфаровка}}) — рузонь<ref name="Геопортал РГО">[http://geo13.ru/reestr/object/542 Геопортал РГО: д. Чуфаровка ]{{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия Республикасонть]].
 Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
-Ашти [[Бель лей|Бель лееенть]] лангсо, кона [[Чюжь лей|Чюжь леенть]] сяглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+Ашти [[Бель лей|Бель леенть]] лангсо, кона [[Чюжь лей|Чюжь леенть]] сяглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1866 ие|1866]]) ''Чуфаровка – веле 6 кудот марто Спассонь уездсэ''.}}
 {{oq|ru|В «СНМ Тамбовской губернии» (1866) – Чуфаровка, деревня из 6 дворов  Спасского уезда.}}
 {{Цитатань пе}}
