--- a/Инесаро_лей.mw
+++ b/Инесаро_лей.mw
@@ -2,7 +2,7 @@
 {{Лия смустьтне|Инесар (смустьтне)}}
 '''И́несаро лей''' — лей кона чуди [[Мордовия Республикась|Мордовиянь Масторга]], [[Ратор лей|Ратор леенть]] видьёнонь сянглей. 
 
-Кувалмозо 168 [[Вайгельпе|вп]], покшолмазо 3860 [[вп]]². Ярсамозо-симеманзо [[Лов|ловонь]]. Тундань чадыведесь покш чадыковсто; кизна алкине меженесь. Куншкань ютавтовксозо [[Саран ош|Саран ошонть]] вакксо 7,71 м³/сек. Кельми — [[Сундерьков|сундерьковсто]], панжови [[Чадыков|чадыковсто]].
+Кувалмозо 168 [[Вайгельпе|вп]], покшолмазо 3860 [[Вайгельпе|вп]]². Ярсамозо-симеманзо [[Лов|ловонь]]. Тундань чадыведесь покш чадыковсто; кизна алкине меженесь. Куншкань ютавтовксозо [[Саран ош|Саран ошонть]] вакксо 7,71 м³/сек. Кельми — [[Сундерьков|сундерьковсто]], панжови [[Чадыков|чадыковсто]].
  
 Инесаро леенть ланксо аштить ошт: [[Оразай ош]], [[Саран ош]].
 {{Раторонь сёлт}}
