*Empty MediaWiki Message*

--- a/Чуфаровка_(смустьтне).mw
+++ b/Чуфаровка_(смустьтне).mw
@@ -1,6 +1,7 @@
 '''Чуфаровка''':
 ;Топонимт
 * [[Чуфаровка (Пейкужо буе)|Чуфаровка]] — рузонь веле [[Пейкужо буе]]сэ [[Мордовия]]со.
+* [[Большое Чуфарово (Рамаданбуе)|Большое Чуфарово]] — рузонь веле [[Рамаданбуе]]сэ [[Мордовия]]со.
 * [[Малая Чуфаровка (Рамаданбуе)|Малая Чуфаровка]] —  веле [[Рамаданбуе]]сэ [[Мордовия]]со. 
 
 __DISAMBIG__
