*Empty MediaWiki Message*

--- a/Салминка_лей.mw
+++ b/Салминка_лей.mw
@@ -25,7 +25,7 @@
 
 Кувалмозо 16 [[Вайгельпе|вп]]. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=179206|title=Государственный водный реестр РФ: Бель|archiveurl=http://www.webcitation.org/69JTkJOTs|archivedate=2012-07-21}}</ref> леенть пурнавкссо. 
 
-Салминка лей лангсо аштить [[Рамаданбуе]]нь велетне<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Раздолье (Рамаданбуе)|Раздолье]], [[Салма (Рамаданбуе)|Салма]], [[Чуфаровка (Пейкужо буе)|Чуфаровка]].
+Салминка лей лангсо аштить [[Рамаданбуе]]нь велетне<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Раздолье (Рамаданбуе)|Раздолье]], [[Салма (Рамаданбуе)|Салма]], [[Малая Чуфаровка (Рамаданбуе)|Малая Чуфаровка]].
 
 == Леенть лемденть  ==
 Лемесь саезь, '''салм-'''гидронимстэ<ref name="Память, запечатленная в слове"/>, конань –  суоми-угрань юрозо: {{Lang-fi|salmi}}, {{Lang-et|salm}} —{{Lang-ru|«пролив»}}.
