*Empty MediaWiki Message*

--- a/Инесаро_лей.mw
+++ b/Инесаро_лей.mw
@@ -1,9 +1,38 @@
-[[File:Saransk Insar.jpg|right|thumb|Инесаро лей, Саран ош]]
+{{Лей
+ |Лем                     = Инесаро лей
+  |Эсьлем                 = {{Lang-ru|Инсар}}
+ |Артовкс                 = Saransk Insar.jpg
+  |артовксонть эйсте      = Инесаро лей, [[Саран ош]]
+ |Кувалма                 = 168
+ |Площадь бассейна        = 3860
+ |Бассейн                 =Ратор лей/Сура лей/Рав/Каспиянь иневедь
+ |Ведень ютавтовкс        = 7,71
+  |Онкстамо тарка         = 
+ |Лейбря                  = 
+  |Лейбрянь тарказо       =  
+  |Лейбрянь сэрезе        =  248
+  |Лейбрянь координататне = 53/56/35/N/44/32/08/E
+ |Прамо                   = Ратор лей
+  |Прамонть тарказо       = 136 вп кершёнонь чирева
+  |Прамонть сэрезе        = 97
+  |Прамонть координататне =54/42/53/N/45/18/07/E
+ |Леенть чиремксесь       = 
+ |Мастор                  = Россия
+  |Ёнкст                  = Мордовия Республикась 
+   |Буе                   = 
+}}
 {{Лия смустьтне|Инесар (смустьтне)}}
-'''И́несаро лей''' — лей кона чуди [[Мордовия Республикась|Мордовиянь Масторга]], [[Ратор лей|Ратор леенть]] видьёнонь сянглей. 
+'''И́несаро лей''', '''Инзара<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Инсар}}) — лей кона чуди [[Мордовия Республикась|Мордовиянь Масторга]], [[Ратор лей|Ратор леенть]] видьёнонь сянглей. 
 
 Кувалмозо 168 [[Вайгельпе|вп]], покшолмазо 3860 [[Вайгельпе|вп]]². Ярсамозо-симеманзо [[Лов|ловонь]]. Тундань чадыведесь покш чадыковсто; кизна алкине меженесь. Куншкань ютавтовксозо [[Саран ош|Саран ошонть]] вакксо 7,71 м³/сек. Кельми — [[Сундерьков|сундерьковсто]], панжови [[Чадыков|чадыковсто]].
  
-Инесаро леенть ланксо аштить ошт: [[Оразай ош]], [[Саран ош]].
+Инзара леенть ланксо аштить ошт: [[Оразай ош]], [[Саран ош]], ды велеть<ref name="Память, запечатленная в слове"/>: [[Мурай Веле (Оразайбуе)|Мурай Веле]], [[Инсар-Акшино (Оразайбуе)|Инсар-Акшино]], [[Сире Усад (Оразайбуе)|Сире Усад]], [[Турксляй (Оразайбуе)|Турксляй]], [[Красный Клин (Оразайбуе)|Красный Клин]], [[Архангельское Голицыно (Оразайбуе)|Архангельское Голицыно]], [[Красное Сельцо (Оразайбуе)|Красное Сельцо]], [[Надеждинка (Оразайбуе)|Надеждинка]], [[Болду (Оразайбуе)|Болду]], [[Луговая (Оразайбуе)|Луговая]], [[Суркино (Лямбирьбуе)|Суркино]], [[Хаджи (Лямбирьбуе)|Хаджи]], [[Красный Дол (Лямбирьбуе)|Красный Дол]], [[Большая Елховка (Лямбирьбуе)|Большая Елховка]], [[Шувалово (Лямбирьбуе)|Шувалово]], [[Кривозерье (Лямбирьбуе)|Кривозерье]], [[Анненково (Рамаданбуе)|Анненково]], [[Красный Узел (Рамаданбуе)|Красный Узел]], [[Ромоданово (Рамаданбуе)|Ромоданово]], [[Ивановка (Рамаданбуе)|Ивановка]], [[Каменка (Рамаданбуе)|Каменка]], [[Кавторовка (Рамаданбуе)|Кавторовка]], [[Константиновка (Рамаданбуе)|Константиновка]], [[Заречный (Рамаданбуе)|Заречный]], [[Пушкино (Рамаданбуе)|Пушкино]], [[Алтары (Рамаданбуе)|Алтары]], [[Ромодановский махоркосовхоз (Рамаданбуе)|Ромодановский махоркосовхоз]], [[Лада (Ицял буе)|Лада]], [[Инсаровка (Ицял буе)|Инсаровка]], [[Оброчное (Ицял буе)|Оброчное]], [[Атманка (Ицял буе)|Атманка]], [[Песочной (Ицял буе)|Песочной]], [[Языковка (Ицял буе)|Языковка]], [[Варваровка (Ицял буе)|Варваровка]], [[Ицяло (Ицял буе)|Ицяло]], [[Ульянка (Ицял буе)|Ульянка]], [[Баево (Ицял буе)|Баево]], [[Александровка (Инесаро буе)|Александровка]], [[Жедрино (Инесаро буе)|Жедрино]].
+
+== Леенть лемденть  ==
+Лемесь саезь,  {{Lang-myv|ине}}  {{Lang-ru|«большой, великий»}}  + ''сар ~ сара'', {{Lang-ru|«развилка, ответвление»}}<ref name="Память, запечатленная в слове"/>.
+== Сёрм.: ==
+<references />
+
+
 {{Раторонь сёлт}}
 [[Категория:Лейть|И]]
