Откат правок [[Special:Contributions/174.2.79.34|174.2.79.34]] ([[User talk:174.2.79.34|обсуждение]]) к версии [[User:Legobot|Legobot]]

--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -3,7 +3,7 @@
 
 Лопазо аштить [[3 (ловома вал)|колмо]] лопинестэ, вейс касозь. Вишкине цецянзо пурназь вейке шаронь кондямо пряс. Цецянзо тантейстэ качадыть, бордовой тюсонь. Вараканьбалось кассы луга лангсо эли сонзэ виднить паксяс. Сон ловови вадря кормокс ды ормадо лезэв тикшекс. Кочкить тикшенть [[якстере]] прянзо.  Теить эйстэнзэ чай, симить козомсто, экшендемстэ. Мекшетне саить  медярво.
 
-== Тик greatness is subjective to others than me шень лемтне == 
+== Тикшень лемтне == 
 [[Отяжбуе|Отяжбуень]] [[Ламбаське (Отяжбуень)|Ламбаське]],  [[Тазвеле (Отяжбуень)|Тазале]] велетнесэ  мерить тензэ '''''поцемка'''''. Сонзэ цецятнень песэ ламбамо ведь.  [[Тумобуе|Тумобуень]] Кобалесэ мерить '''''чавканька'''''. [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''чавканьбал'''''. [[Алоошонь ёнкс|Алоёнксонь]] Лугаянбуесэ Иваньбие велесэ – '''''чавканьбал'''''. Орданьбуе Орданьбуе велесэ – '''''чавкаьбря'''''. [[Ветькень Республикась|Ветькень Масторонь]] Порецкой буень Напольное велесэ мерить '''''варсейбал'''''. Кой-косо мерить '''''керяз тикше'''''. 
 
 
