--- a/Емла_Пишляйня_(Атюрьбуе).mw
+++ b/Емла_Пишляйня_(Атюрьбуе).mw
@@ -58,6 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Пишля (смустьтне)}}
 '''Ёмла Пишляйня'''  (лиякс кортыть: '''Вярде Пишляй<ref name="Память, запечатленная в слове"/>''', {{lang-ru|с. Верхний Пишляй}}, {{lang-tt|Югары Пешли}}) — те [[печкаст|печкасонь]]<ref name="Многоликая"/> велесь [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
 Ашти [[Пишля]] лей лагсо. Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Верхние Пишляи (Малые Пишляи) — 40<ref name="Многоликая"/> кудот марто Чополтонь уездсэ''.
