*Empty MediaWiki Message*

--- a/Емла_Пишляйня_(Атюрьбуе).mw
+++ b/Емла_Пишляйня_(Атюрьбуе).mw
@@ -61,7 +61,7 @@
 {{Лия смустьтне|Пишля (смустьтне)}}
 '''Ёмла Пишляйня'''  (лиякс кортыть: '''Вярде Пишляй<ref name="Память, запечатленная в слове"/>''', {{lang-ru|с. Верхний Пишляй}}, {{lang-tt|Югары Пешли}}) — те [[печкаст|печкасонь]]<ref name="Многоликая"/> велесь [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
-Ашти [[Пишля]] лей лагсо. Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Верхние Пишляи (Малые Пишляи) — 40<ref name="Многоликая"/> кудот марто Чополтонь уездсэ''.
+Ашти [[Пишля лей]] лагсо. Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Верхние Пишляи (Малые Пишляи) — 40<ref name="Многоликая"/> кудот марто Чополтонь уездсэ''.
 
 == Веленть лемденть  ==
 Лемесь-гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>:  {{Lang-mdf|Пяше}} ({{Lang-myv|[[Пекше]]}}) + {{Lang-mdf|ляй}} ({{lang-myv|лей}})
