*Empty MediaWiki Message*

--- a/Пишля_(смустьтне).mw
+++ b/Пишля_(смустьтне).mw
@@ -3,7 +3,7 @@
 * [[Татарская Пишля (Оразайбуе)|Татарская Пишля]] — печаксонь веле [[Оразайбуе]]сэ [[Мордовия]]со.
 * [[Мордовская Пишля (Оразайбуе)|Мордовская Пишля]] — рузонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
 * [[Пишля (Оразайбуе)|Пишля]] — рузонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
-* [[Емла Пишляйня (Атюрьбуе)|Емла Пишляйня]]  — печаксонь веле [[Оразайбуе]]сэ [[Мордовия]]со.
+* [[Емла Пишляйня (Атюрьбуе)|Емла Пишляйня]]  — печаксонь веле [[Атюрьбуе]]сэ [[Мордовия]]со.
 
 ;Гидроним
 *[[Пишля лей|Пишля]] — лей [[Россия]]со, [[Мордовия]]со. 
