*Empty MediaWiki Message*

--- a/Картлей_(Кадонь_буе).mw
+++ b/Картлей_(Кадонь_буе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-
+{{Лия смустьтне|Картлей (смустьтне)}}
 '''Картлей''' ({{lang-ru|д. Картлей}})  — рузонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/k_Kartlei.htm Многоликая Мордовия: Село Картлей] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
 
 == Веленть лемденть  ==
