--- a/Картлей.mw
+++ b/Картлей.mw
@@ -29,7 +29,7 @@
 Картлей леенть ланксо аштить [[Оразайбуе]]нь велеть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Кулишейка (Оразайбуе)|Кулишейка]], [[Мокшень Баймак (Оразайбуе)|Мокшень Баймак]], [[Хованщина (Оразайбуе)|Хованщина]].
 
 == Леенть лемденть  ==
-Гидро-юрось '''карт-''', паряк суоми-угрань, ванодо: {{Lang-kv|кырта}} ({{Lang-ru|«скалистое обнажение»}}) <ref name="Воронцова О.П">Воронцова О.П. Топонимика Республики Марий Эл (историко-этимологический анализ) / О.П. Воронцова, И.С. Галкин. Йошкар-Ола: Изд-во Мар. полиграф. комбината, 2002. 422 с. {{ref-ru}}, {{ref-myv}}</ref>.
+Гидро-юрось '''карт-''', паряк суоми-угрань, ванодо: {{Lang-kv|кырта}} ({{Lang-ru|«скалистое обнажение»}}) <ref name="Воронцова О.П">Воронцова О.П. Топонимика Республики Марий Эл (историко-этимологический анализ) / О.П. Воронцова, И.С. Галкин. Йошкар-Ола: Изд-во Мар. полиграф. комбината, 2002. 422 с. {{ref-ru}}</ref>.
 
 == Сёрм.: ==
 <references />
