*Empty MediaWiki Message*

--- a/Миролейка.mw
+++ b/Миролейка.mw
@@ -22,7 +22,7 @@
    |Буе                   = Орданьбуе
 }}
 
-'''Миролейка''' ({{Lang-ru|Миролейка}}) — лейне кона чуди [[Мордовия Республикась|Мордовиянь Масторга]] ды [[Ветькень Республикась|Чуваштява]], [[Ратор лей|Ратор леенть]] кершёнонь сянглей. 
+'''Миролейка''' ({{Lang-ru|Миролейка}}) — лейне кона чуди [[Мордовия Республикась|Мордовиянь Масторга]] ды [[Ветькень Республикась|Чувашиява]], [[Ратор лей|Ратор леенть]] кершёнонь сянглей. 
 
 Кувалмозо 20 [[Вайгельпе|вп]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177557|title=Государственный водный реестр РФ: Пишля|archiveurl=http://www.webcitation.org/69C7djeXk|archivedate=2012-07-16}}</ref>, покшолмазо 89,9 [[Вайгельпе|вп]]².
 
