*Empty MediaWiki Message*

--- a/Урляй.mw
+++ b/Урляй.mw
@@ -28,7 +28,7 @@
 Урляй лангсо аштить [[Оразайбуе]]нь велетне<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Верхний Урледим (Оразайбуе)|Верхний Урледим]], [[Нижний Урледим (Оразайбуе)|Нижний Урледим]].
 
 == Леенть лемденть  ==
-'''ур''' – суоми-угрань юр: ''хант.'' '''uri''' ({{Lang-ru|«старица, старое русло реки»<ref name="Терешкин Н">Терешкин Н.И. Словарь восточно-хантыйских диалектов.  Л.: Наука. Ленингр. отд-ние, 1981. 544 с.{{ref-ru}}</ref> + {{lang|kca|ляй}}  ({{Lang-ru|«река, речка»}})<ref name="Память, запечатленная в слове"/>}}) 
+'''ур''' – суоми-угрань юр: ''хант.'' '''uri''' ({{Lang-ru|«старица, старое русло реки»<ref name="Терешкин Н">Терешкин Н.И. Словарь восточно-хантыйских диалектов.  Л.: Наука. Ленингр. отд-ние, 1981. 544 с.{{ref-ru}}</ref> + {{Lang-mdf|ляй}}  ({{Lang-ru|«река, речка»}})<ref name="Память, запечатленная в слове"/>}}) 
 
 == Сёрм.: ==
 <references />
