--- a/Кондарша_лей.mw
+++ b/Кондарша_лей.mw
@@ -23,7 +23,7 @@
 }}
 '''Кондарша''' — лей [[Мордовия]]со, чуди [[Ицял буе]]ва. [[Инесаро лей|Инесаро леень]] витьёнонь сянглей.
 
-Кувалмозо 18 [[Вайгельпе|вп]], покшолмазо 54,7 вп². Прамонть тарказо ушодови 13 вп витьёнонь чирева [[Инесаро лей|Инесаро леенть]]. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177462|title=Государственный водный реестр РФ: Урляй|archiveurl=http://www.webcitation.org/69C7m0li3|archivedate=2012-07-16}}</ref> леенть пурнавкссо ( [[Йока|Йока леенть]] пурнавксонзо теме). 
+Кувалмозо 18 [[Вайгельпе|вп]], покшолмазо 54,7 вп². Прамонть тарказо ушодови 13 вп витьёнонь чирева [[Инесаро лей|Инесаро леенть]]. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177532|title=Государственный водный реестр РФ: Кондарша|archiveurl=http://www.webcitation.org/69C7QLgQW|archivedate=2012-07-16}}</ref> леенть пурнавкссо ( [[Йока|Йока леенть]] пурнавксонзо теме). 
 
 Кондарша лей лангсо аштить [[Ицял буе]]нь велетне<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Апухтино (Ицял буе)|Апухтино]], [[Павловка (Ицял буе)|Павловка]].
 == Леенть лемденть  ==
