*Empty MediaWiki Message*

--- a/Козловка_(Отяжбуе).mw
+++ b/Козловка_(Отяжбуе).mw
@@ -1,7 +1,7 @@
 {{Лия смустьтне|Козловка (смустьтне)}}
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Козловка
+ |Эрзянь лем              = Кузлома
  |оригинальное название   = <!-- {{Lang-ru|Козловка}}-->
  |изображение             = 
  |подчинение              = 
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Козловка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Кузлома''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
