--- a/Тюрка_лей.mw
+++ b/Тюрка_лей.mw
@@ -26,7 +26,7 @@
 
 Леенть кувалмозо 10 [[Вайгельбе|вп]]. Тюрька лей лангсо аштить: [[Надеждинский (Покш Игнадбуе)|Надеждинский]], [[Ежовка (Покш Игнадбуе)|Ежовка]] велетне. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177555|title=Государственный водный реестр РФ: Тюрка|archiveurl=http://www.webcitation.org/69C7kiMxg|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
 ==Леенть лемденть==
-Лемесь саеви {{Lang-myv|тюрькс}}, ({{Lang-ru|«кочкарник, низменное или болотистое место»}}<ref name="Память, запечатленная в слове"/>.
+Лемесь саеви {{Lang-myv|тюрькс}} - ({{Lang-ru|«кочкарник, низменное или болотистое место»}}<ref name="Память, запечатленная в слове"/>.
 
 
 == Сёрм.: ==
