/* Ицял буень велетне */

--- a/Ицял_буе.mw
+++ b/Ицял_буе.mw
@@ -81,7 +81,7 @@
 * [[Атманка (Ицял буе)|Атманка]]
 * [[Баево (Ицял буе)|Баево]]
 * [[Береговые Сыреси (Ицял буе)|Береговые Сыреси]]
-* Барахманское лесничество
+* [[Барахманское лесничество (Ицял буе)|Барахманское лесничество]]
 * [[Покш Пестровка (Ицял буе)|Большая Пестровка]] 
 * [[Покш Осинки (Ицял буе)|Большие Осинки]] 
 * [[Бугры (Ицял буе)|Бугры]]
