*Empty MediaWiki Message*

--- a/Уксун_лей.mw
+++ b/Уксун_лей.mw
@@ -28,7 +28,7 @@
 
 Лейбрянь тарказо ашти 75 вп кершёнонь Ратор лей чирева 2 вп Покш Кузьминский вирьпулостонть ды 16 вп пелеве-чивалгома ёнов [[Орданьбуе (ош, Орданьбуе)|Орданьбуе ошстонть]]. Чуди лембе-чивалгомав, ды леенть ланксо ашти<ref name="Память, запечатленная в слове"/> [[Скипидарка (Орданьбуе)|Скипидарка]], ней тосо кияк аэри<ref>[http://mordovia.news-city.info/docs/sistemsv/dok_oegwfb.htm Об Исключении Из Учета Административно — Территориального Деления Республики Мордовия Населенных Пунктов По Отдельным Районам]</ref>. Ратор лейс пры [[Анютино (Орданьбуе)|Анютино]] веленть каршо. 
 == Леенть лемденть  ==
-Лемесь саеви паряк: {{Lang-myv|уксо}} - ({{Lang-ru|о «вяз}}) » + топоформант  '''-ун''' <ref name="Память, запечатленная в слове"/>.
+Лемесь саеви паряк: {{Lang-myv|уксо}} - ({{Lang-ru|«вяз}}) » + топоформант  '''-ун''' <ref name="Память, запечатленная в слове"/>.
 == Сёрм.: ==
 <references />
 
