*Empty MediaWiki Message*

--- a/Нушлейка.mw
+++ b/Нушлейка.mw
@@ -30,7 +30,7 @@
 Лейбрянь тарказо ашти [[Гаваева (Отяжбуе)|Гаваева]] веленть вакссо. Леесь чуди пелеве-чилисема ёнов, юты куншка чудемасонзо Ламбаське веленть. Нуя лейс пры колмо вп пелеве-чилисема ёно веленть эйстэ. Нушлейка леенть ланксо аштить<ref name="Память, запечатленная в слове"/>: [[Ламбаське (Отяжбуе)|Ламбаське]], [[Тазвеле (Отяжбуе)|Тазвеле]], [[Гаваева (Отяжбуе)|Гаваева]].  
 
 ==Леенть лемденть==
-Лемесь саеви {{Lang-myv|нач}}, ({{Lang-ru|«топкое место» }}) + {{Lang-myv|лей}}, ({{Lang-ru| «река» }})<ref name="Память, запечатленная в слове"/> валтнэстэ. Лия арсеманть коряс:  {{Lang-mhr|Нуж ~ Нужа}} – кавто леень лемть<ref name="Терентьева О.П.">Терентьева О.П. Стратиграфия гидронимов Ветлужско-Вятского междуречья // Узловые проблемы современного финно-угроведения: Материалы I Всерос. науч. конф. финно-угроведов 14 – 18 ноября 1994 г. Йошкар-Ола, 1995. С. 394 – 397.  {{ref-ru}}</ref>; {{Lang-mhr|нуш}} валонть юрозо суоми-угрань, ванодо {{Lang-udm|нёж}} - ({{Lang-ru|«низина, лощина, топь, топкое место, трясина»}}),  {{Lang-kv|нёзь}} - ({{Lang-ru|«сырая лесистая ложбина с мелистой почвой»}})<ref name="Память, запечатленная в слове"/>. 
+Лемесь саеви {{Lang-myv|нач}}, ({{Lang-ru|«топкое место» }}) + {{Lang-myv|лей}}, ({{Lang-ru| «река» }})<ref name="Память, запечатленная в слове"/> валтнэстэ. Лия арсеманть коряс:  {{Lang-mhr|Нуж ~ Нужа}} – кавто леень лемть<ref name="Терентьева О.П.">Терентьева О.П. Стратиграфия гидронимов Ветлужско-Вятского междуречья // Узловые проблемы современного финно-угроведения: Материалы I Всерос. науч. конф. финно-угроведов 14 – 18 ноября 1994 г. Йошкар-Ола, 1995. С. 394 – 397.  {{ref-ru}}</ref>; {{Lang-mhr|нуш}} валонть юрозо [[Суоми-угрань кельть|суоми-угрань]], ванодо {{Lang-udm|нёж}} - ({{Lang-ru|«низина, лощина, топь, топкое место, трясина»}}),  {{Lang-kv|нёзь}} - ({{Lang-ru|«сырая лесистая ложбина с мелистой почвой»}})<ref name="Память, запечатленная в слове"/>. 
 
 == Сёрм.: ==
 <references />
