*Empty MediaWiki Message*

--- a/Ростанка_лей.mw
+++ b/Ростанка_лей.mw
@@ -25,7 +25,7 @@
 
 Кувалмозо 15 [[Вайгельпе|вп]], покшолмазо 76,7 вп². Ашти (Верьга) [[Рав]] леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177481|title=Государственный водный реестр РФ: Ростанка (Руднячка)|archiveurl=http://www.webcitation.org/69C7ecqFH|archivedate=2012-07-16}}</ref>).
  
-Лейбрянь тарказо ашти пелеве-чивалгома ёнов [[Шишкеево (Оразайбуе)|Шишкеево]] веленть эйстэ. Леесь чуди пелевеёнкссов. Ростанка ланксо аштить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Ждановка (Оразайбуе)|Ждановка]], [[Кочетовка (Оразайбуе)|Кочетовка]], [[Бекетовка (Оразайбуе)|Бекетовка]].  Рудня лейс пры [[Красная Рудня (Оразайбуе)|Красная Рудня]] велесэнть. 
+Лейбрянь тарказо ашти пелеве-чивалгома ёнов [[Шишкеево (Оразайбуе)|Шишкеево]] веленть эйстэ. Леесь чуди пелевеёнкссов. Ростанка ланксо аштить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Ждановка (Оразайбуе)|Ждановка]], [[Кочетовка (Оразайбуе)|Кочетовка]], [[Бекетовка (Оразайбуе)|Бекетовка]].  Рудня лейс пры [[Красная Рудня (Ташто Шайгабуе)|Красная Рудня]] велесэнть. 
 == Леенть лемденть  ==
 Лемесь саезь {{Lang-ru|ростань «развилка, приток»}}<ref name="Память, запечатленная в слове"/> валстонть.
 == Сёрм.: ==
