*Empty MediaWiki Message*

--- a/Рудня_лей.mw
+++ b/Рудня_лей.mw
@@ -28,7 +28,7 @@
 
 Лейбрянь тарказо ашти [[Лопатино (Лямбирьбуе)|Лопатино веленть]] вакссо 6 вп [[Пелеве ёнкс|пелеве]]ёнов буень куншатаркасто — [[Лямбирь веле (Лямбирьбуе)|Лямбирь веле]]. Лейбрянть ёно леесь чуди [[чивалгома]]в, лиява — пелевеёнксов. Верьгачудемазо ашти [[Лямбирьбуе]]ва, куншкань — [[Ташто Шайгабуе]]ва, алочудемазо — [[Алоошонь ёнкс]]ка [[Починкань буе]]ва. 
  
-Рудня лейсэнть лангсо аштить<ref name="Память, запечатленная в слове"/>: [[Акаевка (Лямбирьбуе)|Акаевка]], [[Болотниково (Лямбирьбуе)|Болотниково]], [[Лопатино (Лямбирьбуе, украинецэнь)|Лопатино (украинецэнь)]], [[Лопатино (Лямбирьбуе, рузонь)|Лопатино (рузонь)]], [[Репьевка (Лямбирьбуе)|Репьевка]], [[Советское (Лямбирьбуе)|Советское]], [[Старая Обуховка (Ташто Шайгабуе)|Старая Обуховка]], [[Ингенер-Пятина (Ташто Шайгабуе)|Ингенер-Пятина]], [[Верхняя Верченка (Ташто Шайгабуе)|Верхняя Верченка]], [[Нижняя Верченка (Ташто Шайгабуе)|Нижняя Верченка]], [[Говорово (Ташто Шайгабуе)|Говорово]] велеть.  Ратор лейс пры [[Ильинское (Починкань буе)|Ильинское]] веленть вакссо. Прамо таркасонть леенть келезэ — 20 метрат.
+Рудня леенть лангсо аштить<ref name="Память, запечатленная в слове"/>: [[Акаевка (Лямбирьбуе)|Акаевка]], [[Болотниково (Лямбирьбуе)|Болотниково]], [[Лопатино (Лямбирьбуе, украинецэнь)|Лопатино (украинецэнь)]], [[Лопатино (Лямбирьбуе, рузонь)|Лопатино (рузонь)]], [[Репьевка (Лямбирьбуе)|Репьевка]], [[Советское (Лямбирьбуе)|Советское]], [[Старая Обуховка (Ташто Шайгабуе)|Старая Обуховка]], [[Ингенер-Пятина (Ташто Шайгабуе)|Ингенер-Пятина]], [[Верхняя Верченка (Ташто Шайгабуе)|Верхняя Верченка]], [[Нижняя Верченка (Ташто Шайгабуе)|Нижняя Верченка]], [[Говорово (Ташто Шайгабуе)|Говорово]] велеть.  Ратор лейс пры [[Ильинское (Починкань буе)|Ильинское]] веленть вакссо. Прамо таркасонть леенть келезэ — 20 метрат.
 
 == Леенть лемденть  ==
 Лемесь саеви<ref name="Память, запечатленная в слове"/>: др.-русск. рудой «рыжий», русск. диал. руда «что-нибудь замаранное, грязное; болотная ржавчина»<ref name="Опыт">Опыт областного великорусского словаря. СПб., 1852. с.  193{{ref-ru}}</ref>; Гидронимт '''Рудня''', '''Руда''', '''Рудка''' келейстэ вастневить Чилисемань Европава<ref name="Мурзаев Э.М. ">Мурзаев Э.М. Словарь народных географических терминов.  М.:  Мысль, 1984. с. 586{{ref-ru}}</ref>
