*Empty MediaWiki Message*

--- a/Рудня_лей.mw
+++ b/Рудня_лей.mw
@@ -26,7 +26,7 @@
 
 Кувалмозо 86 [[Вайгельпе|вп]], покшолмазо 1420 вп². Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177471|title=Государственный водный реестр РФ: Рудня|archiveurl=http://www.webcitation.org/69C7f3PGi|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
 
-Лейбрянь тарказо ашти [[Лопатино (Лямбирьбуе)|Лопатино веленть]] вакссо 6 вп [[Пелеве ёнкс|пелеве]]ёнов буень куншатаркасто — [[Лямбирь веле (Лямбирьбуе)|Лямбирь веле]]. Лейбрянть ёно леесь чуди [[чивалгома]]в, лиява — пелевеёнксов. Верьгачудемазо ашти [[Лямбирьбуе]]ва, куншкань — [[Ташто Шайгабуе]]ва, алочудемазо — [[Алоошонь ёнкс]]ка [[Починкань буе]]ва. 
+Лейбрянь тарказо ашти [[Лопатино (Лямбирьбуе)|Лопатино веленть]] вакссо ды 6 вп [[Пелеве ёнкс|пелеве]]ёнов буень куншатаркасто — [[Лямбирь веле (Лямбирьбуе)|Лямбирь велестэнть]]. Лейбрянть ёно леесь чуди [[чивалгома]]в, лиява — пелевеёнксов. Верьгачудемазо ашти [[Лямбирьбуе]]ва, куншкань — [[Ташто Шайгабуе]]ва, алочудемазо — [[Алоошонь ёнкс]]ка [[Починкань буе]]ва. 
  
 Рудня леенть лангсо аштить<ref name="Память, запечатленная в слове"/>: [[Акаевка (Лямбирьбуе)|Акаевка]], [[Болотниково (Лямбирьбуе)|Болотниково]], [[Лопатино (Лямбирьбуе, украинецэнь)|Лопатино (украинецэнь)]], [[Лопатино (Лямбирьбуе, рузонь)|Лопатино (рузонь)]], [[Репьевка (Лямбирьбуе)|Репьевка]], [[Советское (Лямбирьбуе)|Советское]], [[Старая Обуховка (Ташто Шайгабуе)|Старая Обуховка]], [[Ингенер-Пятина (Ташто Шайгабуе)|Ингенер-Пятина]], [[Верхняя Верченка (Ташто Шайгабуе)|Верхняя Верченка]], [[Нижняя Верченка (Ташто Шайгабуе)|Нижняя Верченка]], [[Говорово (Ташто Шайгабуе)|Говорово]] велеть.  Ратор лейс пры [[Ильинское (Починкань буе)|Ильинское]] веленть вакссо. Прамо таркасонть леенть келезэ — 20 метрат.
 
