/* Яваз леень витьсянголейтне (вп прамсто) */

--- a/Яваз_лей.mw
+++ b/Яваз_лей.mw
@@ -32,8 +32,9 @@
 * 28 вп: [[Лавовка лей]] (Лавов) 
 * 33 вп: [[Ляце лей|Ляце]] 
 * 38 вп: [[Ламар лей|Ламар]] 
-* 41 вп:  Перепиляй 
-* 53 вп:  [[Пишляй]] 
+* 41 вп:  [[Перепиляй]] 
+* 53 вп:  [[Пишляй лей]]
+
 == Сёрм.: ==
 <references />
 
