*Empty MediaWiki Message*

--- a/Яваз_лей.mw
+++ b/Яваз_лей.mw
@@ -33,7 +33,7 @@
 * 33 вп: [[Ляце лей|Ляце]] 
 * 38 вп: [[Ламар лей|Ламар]] 
 * 41 вп:  [[Перепиляй]] 
-* 53 вп:  [[Пишляй лей]]
+* 53 вп:  [[Пишля лей]]
 
 == Сёрм.: ==
 <references />
