--- a/Левжа_(смустьтне).mw
+++ b/Левжа_(смустьтне).mw
@@ -1,6 +1,6 @@
 '''Левжа''':
 ;Топонимт
-* [[Левож (Оразайбуе)|Левож]] — мокшонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
+* [[Левож (Оразайбуе)|Левжа]] — мокшонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
 
 ;Гидроним
 *[[Левжа лей|Левжа]] — лей [[Россия]]со, [[Мордовия]]со. 
