/* Неень шкань фольклоронь пурнамот */

--- a/Эрзянь_фольклор.mw
+++ b/Эрзянь_фольклор.mw
@@ -49,10 +49,10 @@
 Экспедициянь перть диктофонс сермадозь ведьгемень часос материал. Теезь ламо фотографият. 
 Материалось, кона сермадозель диктофонс тонавтнемадо мейле, невтьсы, кода 110 иес полавтовсть эрзянь морось, евксось, жанрань лия видтнэ. Евтазь велетнесэ пурназь материалось невти эрзянь моронть неень тевензэ. Истя Пензань областень Сосновоборской райононь Тешнярь велесэ удалась сермадомс ламо содавикс хорт, группат. Ульнесть сермадозь весе жанратне. Белинской райононь Карсаевка велесэ седе парсте ванстовсть устной народной творчествань произведениятне. Тесэ вастовсть истят ломанть, кинь ульнесь мелезэ лездамс ванстомс эрзянь моротнень. Теке жо шкастонть Сярда велесэ эрицятне а пек покш мельсэ лездасть экспедициянтень. Экспедициясь невтизе, эрзянь фольклорось жив. Кезэрень моротне эште эрить ды сынст морсить. Велень эрьва кодамо праздниктне моровтомо а ютнить. 
 
-Афанасьева Ольга Семеновна чачсь 1918 иестэ Пензань областень Бессоновской райононь Пазелки велесэ. Сонзэ мельсэ ламо эрзянь морот. Зярдо кортамось тусь неень шкадонть, сон серьгедсь моро «зярдо пурнавкшныть вейсэ». Аванть ламо моронзо сермадозь магнитофонс. Сонзэ эйкакшонзо, нуцьканзо покш мельсэ кунсолыть эйсэст ошсояк. 
+Афанасьева Ольга Семеновна чачсь 1918 иестэ [[Пенза ёнкс|Пензань областень]] Бессоновской буень [[Пазялго|Пазелки велесэ]]. Сонзэ мельсэ ламо эрзянь морот. Зярдо кортамось тусь неень шкадонть, сон серьгедсь моро «зярдо пурнавкшныть вейсэ». Аванть ламо моронзо сермадозь магнитофонс. Сонзэ эйкакшонзо, нуцьканзо покш мельсэ кунсолыть эйсэст ошсояк. 
 
 Роботатнесэ, конатнесэ тонавтневить неень шкань фольклоронь процесстнэ, аволь весть тешкставкшнось эрзянь фольклоронь традиционной жанратнень енксост. Сынь весе эште апак тонавтне. Моротне эсь художественной питнест эзизь емавто. Сынь кандызь эсь шкань эрямонть минек шкас. 
-Традиционной моротнень Сура маласо велетнесэ морсить те шкас. Сынтемест тесэ а кода. Пензань областень Сосновоборской райононь Тешнярь велень фольклорной ансамблясь, Шемышейской райононь Ташто Яксарка велень хорось а весть ульнесть Московсо, Саранскойсэ, Прибалтикасо. Сынь ламоксть тейнесть выступленият радиова ды телевидениява. 
+Традиционной моротнень [[Сура лей|Сура]] маласо велетнесэ морсить те шкас. Сынтемест тесэ а кода. Пензань областень Сосновоборской райононь Тешнярь велень фольклорной ансамблясь, Шемышейской райононь Ташто Яксарка велень хорось а весть ульнесть Московсо, Саранскойсэ, Прибалтикасо. Сынь ламоксть тейнесть выступленият радиова ды телевидениява. 
 
 Мекс ули покш мель тонавтнемс Сура маласо эрзянь велетнень фольклоронть? Васняяк секс, Сура леень бассейнась v кезэрень эрзятнень эрямо тарка. Теде кортыть исторической документнэ. Тесэнь эрзятнеде складязь ламо преданият, лият мезть. Тесэнь эрицятнень евтнемаст коряс неть таркатне икеле ульнесть пек сюпавт, секскак эрзятне кадовсть тезэнь эрямо. 
 
