*Empty MediaWiki Message*

--- a/Сухая_Атьма_лей.mw
+++ b/Сухая_Атьма_лей.mw
@@ -26,7 +26,7 @@
 
 Кувалмозо 16 [[Вайгельпе|вп]], покшолмазо 68  вп². Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177506|title=Государственный водный реестр РФ: Сухая Атьма|archiveurl=http://www.webcitation.org/69C7hgTwG|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме).
 
-Лейбрянь тарказо ашти Ташто Шайгабуень вирьсэ, 12 вп [[Мельцаны (Ташто Шайгабуе)|Мельцаны веленть]] вакссо, Алоошонь ёнксонь межа модасторнть. Сеске лейбрянь таркасто ушоды чудеме Лямбирьбуева. Чуди пелеве-чилисемаёнов, юты<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> [[Языково (Лямбирьбуе)|Языково]], [[Дальний (Лямбирьбуе)|Дальний посёлканть]] ды [[Николаевка (Лямбирьбуе)|Николаевка веленть]]. Лейсэнть улить знярояк сёлтт. Пры Большая Атьма лей Николаевка алопесэ.
+Лейбрянь тарказо ашти Ташто Шайгабуень вирьсэ, 12 вп [[Мельцаны (Ташто Шайгабуе)|Мельцаны веленть]] вакссо, Алоошонь ёнксонь межа модасторнть. Сеске лейбрянь таркасто ушоды чудеме Лямбирьбуева. Чуди [[Пелеве ёнкс|пелеве]]-[[Чилисема|чилисема]]ёнов, юты<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> [[Языково (Лямбирьбуе)|Языково]], [[Дальний (Лямбирьбуе)|Дальний посёлканть]] ды [[Николаевка (Лямбирьбуе)|Николаевка веленть]]. Лейсэнть улить знярояк сёлтт. Пры Большая Атьма лей Николаевка алопесэ.
 == Леенть лемденть  ==
 Лемесь–перенос, саеви Большая Атьма леенть<ref name="Память, запечатленная в слове"/> эйстэ.
 
