*Empty MediaWiki Message*

--- a/Ужовка_(смустьтне).mw
+++ b/Ужовка_(смустьтне).mw
@@ -1,6 +1,8 @@
 '''Ужовка''':
 ;Топонимт:
 * [[Ужовка (Рамаданбуе)|Ужовка]] — веле [[Мордовия]]со, [[Рамаданбуе]]сэ. 1983 иенть эйстэ кик а эри тесэ.
+* [[Ужовка (Починкань буе)|Ужовка]] — веле  [[Алоошонь ёнкс]]со. 
+* [[Ужово (Алоошонь ёнкс)|Ужово]] — веле  [[Алоошонь ёнкс]]со. 
 
 ;Гидронимт:
 * [[Ужовка (Раторонь сянглей)|Ужовка]] — лей [[Алоошонь ёнкс]]со, [[Ратор лей|Ратор леень]] сянглей.
